wxc/include/ewxw/wxc_glue.h

void       wxComboBox_Copy( TSelf(wxComboBox) _obj );
TClass(wxComboBox) wxComboBox_Create( TClass(wxWindow) _prt, int _id, TStringVoid _txt, TRect(_lft,_top,_wdt,_hgt), TArrayString(n,str), int _stl );
void       wxComboBox_Cut( TSelf(wxComboBox) _obj );
int        wxComboBox_GetInsertionPoint( TSelf(wxComboBox) _obj );
int        wxComboBox_GetLastPosition( TSelf(wxComboBox) _obj );
TStringLen wxComboBox_GetValue( TSelf(wxComboBox) _obj, TStringOutVoid _buf );
void       wxComboBox_Paste( TSelf(wxComboBox) _obj );
void       wxComboBox_Remove( TSelf(wxComboBox) _obj, int from, int to );
void       wxComboBox_Replace( TSelf(wxComboBox) _obj, int from, int to, TString value );
void       wxComboBox_SetEditable( TSelf(wxComboBox) _obj, TBool editable );
void       wxComboBox_SetInsertionPoint( TSelf(wxComboBox) _obj, int pos );
void       wxComboBox_SetInsertionPointEnd( TSelf(wxComboBox) _obj );
void       wxComboBox_SetSelection( TSelf(wxComboBox) _obj, int n );
void       wxComboBox_SetTextSelection( TSelf(wxComboBox) _obj, int from, int to );